# SolidCourseFramework/CodeGeneration/APIGenerated/Models/CapabilitiesAPIModel.swift
@@ -1,10 +1,0 @@
-//
-// CapabilitiesAPIModel.swift
-//
-// Generated by vapor-server-codegen
-// https://github.com/thecheatah/SwiftVapor-swagger-codegen
-// Template Input: /Models.CapabilitiesAPIModel
-
-import Vapor
-
-public typealias CapabilitiesAPIModel = [CapabilityAPIModel]
