# SolidCourseFramework/CodeGeneration/APIGenerated/Models/CapabilityAPIModel.swift
@@ -1,20 +1,0 @@
-//
-// CapabilityAPIModel.swift
-//
-// Generated by vapor-server-codegen
-// https://github.com/thecheatah/SwiftVapor-swagger-codegen
-// Template Input: /Models.CapabilityAPIModel
-
-import Vapor
-
-
-public final class CapabilityAPIModel: Content {
-
-    public var id: Int64?
-    public var name: String?
-
-    public init(id: Int64?, name: String?) { 
-        self.id = id
-        self.name = name
-    }
-}
