# SolidCourseFramework/CodeGeneration/APIGenerated/Models/ObjectAPIModel.swift
@@ -1,22 +1,0 @@
-//
-// ObjectAPIModel.swift
-//
-// Generated by vapor-server-codegen
-// https://github.com/thecheatah/SwiftVapor-swagger-codegen
-// Template Input: /Models.ObjectAPIModel
-
-import Vapor
-
-
-public final class ObjectAPIModel: Content {
-
-    public var id: Int64?
-    public var name: String?
-    public var capabilities: CapabilitiesAPIModel?
-
-    public init(id: Int64?, name: String?, capabilities: CapabilitiesAPIModel?) { 
-        self.id = id
-        self.name = name
-        self.capabilities = capabilities
-    }
-}
